--- a/index.html
+++ b/index.html
@@ -90,6 +90,6 @@
                 </tr>    
             </table>
             <hr>
-        <a href="cv/Contact.html">CONTACT ME</a>
+        <a href="\index.html/Contact.html">CONTACT ME</a>
     </body>
 </html>
