--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <table cellspacing="20">
             <tr>
-                <td><img src="\images/Afzal.png" alt="Muhammad Afzal Profile" height="300" width="300"></td>
+                <td><img src="/images/Afzal.png" alt="Muhammad Afzal Profile" height="300" width="300"></td>
                 <td><h1>MUHAMMAD AFZAL SOHAIL</h1>
                     <p><em><strong><a href="#">Website Developer and Student</a></strong> of <strong><a href="#">Software Engineering</a></strong>.</em>
                     </p>
